conectado, funciona carrito productos

--- a/src/app/admin/ordenes/detalle-orden/detalle-orden.component.html
+++ b/src/app/admin/ordenes/detalle-orden/detalle-orden.component.html
@@ -73,7 +73,7 @@
                                 <div class="col-lg-12">
                                     <div class="btn-toolbar" role="toolbar" aria-label="Settings toolbar">
                                         <div class="btn-group mr-2 mb-2" role="group" aria-label="Settings group">
-                                            <button type="button" class="btn btn-dark btn-icon" *ngIf="venta.estado == 'Venta en proceso' && !btn_cancelar" data-toggle="modal" [attr.data-target]="'#sol_cancelar'">
+                                            <button type="button" class="btn btn-danger" *ngIf="venta.estado == 'Venta en proceso' && !btn_cancelar" data-toggle="modal" [attr.data-target]="'#sol_cancelar'">
                                               <i class="fa fa-paypal"></i> &nbsp;
                                               Solicitar reembolso
                                             </button>
@@ -112,7 +112,7 @@
                                             </div>
                                             <!-- modal cancelacion -->
                                             <ng-container *ngIf="venta.estado == 'Enviado' || venta.estado == 'Venta en proceso' || venta.estado == 'Finalizado'">
-                                                <a [routerLink]="['/cuenta/ordenes/tickets/',venta._id]" type="button" class="btn btn-accent btn-icon">
+                                                <a [routerLink]="['/app/cuenta/ordenes/tickets/',venta._id]" type="button" class="btn btn-primary">
                                                     <i class="fa fa-help mr-1"></i> Tickets
                                                 </a>
                                             </ng-container>
@@ -174,7 +174,7 @@
                                 </div>
                                 <div class="col-lg-12 form-group" *ngIf="data_cancelacion">
                                     <div class="card">
-                                        <div class="card-header bg-accent">
+                                        <div class="card-header bg-primary">
                                             <h6 style="margin-bottom: 0px;color: white">Solicitud de cancelación</h6>
                                         </div>
                                         <div class="card-body">
@@ -210,16 +210,16 @@
                                     <div class="col-lg-12 mb-4" *ngFor="let item of detalle">
                                         <!-- Horizontal card layout -->
                                         <div class="card">
-                                            <div class="row no-gutters">
+                                            <div class="row ">
                                                 <div class="col-sm-3">
-                                                    <img [src]="item.img | imagenPipe: 'productos'" class="rounded-left" alt="Card image">
+                                                    <img [src]="item.producto.img | imagenPipe: 'productos'" style="width:100%" class="rounded-left" alt="Card image">
                                                 </div>
                                                 <div class="col-sm-9">
                                                     <div class="card-body">
                                                         <div class="media-body pt-2">
                                                             <div class="row">
                                                                 <div class="col-lg-12">
-                                                                    <h3 class="product-title font-size-base mb-2"><a [routerLink]="['/producto/',item.producto.slug]">{{item.producto.titulo}}</a></h3>
+                                                                    <h3 class="product-title font-size-base mb-2"><a [routerLink]="['/producto/',item.producto._id]">{{item.producto.titulo}}</a></h3>
                                                                 </div>
                                                                 <div class="col-lg-6">
                                                                     <div class="font-size-sm"><span class="text-muted mr-2">Cantidad:</span>{{item.cantidad}}</div>
