--- a/src/app/admin/ordenes/chat-ticket/chat-ticket.component.html
+++ b/src/app/admin/ordenes/chat-ticket/chat-ticket.component.html
@@ -79,7 +79,7 @@
                                 <input class="custom-control-input" type="checkbox" id="close-ticket" name="close_ticket" [(ngModel)]="close_ticket">
                                 <label class="custom-control-label" for="close-ticket">Enviar y cerrar el ticket</label>
                             </div>
-                            <button class="btn btn-primary my-2" type="submit">Enviar</button>
+                            <button class="btn btn-primary mt-2" type="submit">Enviar</button>
                         </div>
                     </form>
                 </div>
